--- a/CodeRoulette/package.json
+++ b/CodeRoulette/package.json
@@ -5,7 +5,7 @@
     "start" : "node Server.js"
   },
   "description": "",
-  "main": "index.js",
+  "main": "views/login.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
